# masters-ml-projects

./: .gitignore  README.md
Big Data Analytics/: cluster_labelling.ipynb  data_clustering.ipynb  environment.yaml
Big Data Analytics/clustering/: fuzzy.py  kmeans.py  utils.py
Big Data Analytics/datasets/: Dataset2.csv
Computer Vision/Laboratory 00/: Laboratory_00_Python_Tutorial.ipynb
Computer Vision/Laboratory 01/: features.ipynb  knn.ipynb  requirements.txt  softmax.ipynb  svm.ipynb  two_layer_net.ipynb
Computer Vision/Laboratory 02/: BatchNormalization.ipynb  ConvolutionalNetworks.ipynb  Dropout.ipynb  FullyConnectedNets.ipynb  PyTorch.ipynb
Computer Vision/Laboratory 03/: Generative_Adversarial_Networks_PyTorch.ipynb  LSTM_Captioning.ipynb  NetworkVisualization-PyTorch.ipynb  StyleTransfer-PyTorch.ipynb
Fundamentals of Computer Vision/: environment.yaml
Fundamentals of Computer Vision/DoodleClassifier/: README.md  pyproject.toml
Fundamentals of Computer Vision/ImageAugmentationSystem/: README.md  pyproject.toml
Fundamentals of Computer Vision/ImageAugmentationSystem/pictomancer/: config1.yaml  config2.yaml  main.py
Fundamentals of Computer Vision/ImageAugmentationSystem/pictomancer/gui/: app.py
Fundamentals of Computer Vision/ImageAugmentationSystem/pictomancer/utils/: augmentation.py
Fundamentals of Machine Learning/: app_rating_prediction.ipynb  environment.yaml
Fundamentals of Machine Learning/Laboratory 01/: Laboratory 01.ipynb
Research Topics in Machine Learning/: README.md  environment.yaml
(+45 files in other folders)
